# PySparkAssist

./: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-entrypoint.sh  env.example  pyproject.toml  requirements-runtime.txt  requirements.txt
frontend/: app.js  index.html  styles.css
pysparkassist/: __main__.py  config.py  docker_bootstrap.py
pysparkassist/api/: __init__.py  app.py  groq_limits_store.py  rate_limiter.py  routes.py
pysparkassist/generation/: __init__.py  groq_client.py  prompt.py
pysparkassist/ingest/: __init__.py  __main__.py  chunker.py  cli.py  constants.py  embedder.py  entities.py  graph_builder.py  scraper.py
pysparkassist/retrieval/: __init__.py  context_builder.py  graph_expander.py  query_processor.py  searcher.py
stitch_sparkassist_home/: DESIGN.md  code.html
tests/: conftest.py  test_chunker.py  test_config.py  test_context_builder.py  test_entities.py  test_graph_expander.py  test_groq_limits_store.py  test_rate_limiter.py  test_routes.py  test_searcher.py
