[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pysparkassist"
version = "0.1.0"
description = "RAG-powered PySpark learning assistant"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "qdrant-client>=1.12.0",
    "sentence-transformers>=3.3.0",
    "groq>=0.11.0",
    "crawl4ai>=0.4.0",
    "pydantic-settings>=2.6.0",
    "sse-starlette>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
include = ["pysparkassist*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
